adds core photo upload
